--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -8,6 +8,12 @@
       <div class="col-md-3">
         <%= link_to "ログイン", '#'%>
       </div>
+      <div class="col-md-3">
+        <%= link_to "破損報告書作成", new_topic_path %>
+      </div>
+      <div class="col-md-3">
+        <%= link_to "破損報告書一覧", '#' %>
+      </div>
     </div>
   </div>
 </div>
