--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,6 @@
 <div class= "top-hero-wapper text-center">
   <div class= "container top-hero-container">
-    <h1 class= "text-white">金型メンテナンス管理</h1>
+    <h1 class= "text-white">金型修正管理システム</h1>
     <div class="row">
       <div class="col-md-offset-3 col-md-3">
         <%= link_to "会員登録",'#'%>
@@ -12,7 +12,7 @@
         <%= link_to "破損報告書作成", new_topic_path %>
       </div>
       <div class="col-md-3">
-        <%= link_to "破損報告書一覧", '#' %>
+        <%= link_to "破損報告書一覧", topics_path %>
       </div>
     </div>
   </div>
