--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
+    <meta charset="UTF-8">
     <title>Zaiko</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,6 +11,28 @@
   </head>
 
   <body>
+    <% flash.each do |key, value| %>
+      <div class="alert alert-<%= key %>" role="alert"><%= value %></div>
+    <% end %>
+     <nav class="navbar navbar-default navbar-fixed-top navbar-transparent">
+       <div class="container">
+        <h1 class="logo">（仮）管理システム</h1>
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to "破損報告書作成", new_topic_path %></li>
+          <li><%= link_to "破損報告書一覧", topics_path  %></li>
+          <li><%= link_to "金型点検", new_inspect_path  %></li>
+          <li><%= link_to "金型点検一覧", inspects_path  %></li>
+          <li><%= link_to "イベント議事録", "#"  %></li>
+          <li><%= link_to "一般金型メンテナンス", "#"  %></li>
+          <li><%= link_to "会員登録", new_user_path   %></li>
+        </ul> 
+       </div>  
+     </nav>
     <%= yield %>
+    <script>
+      $(function(){
+        $(".alert").fadeOut(5000);
+           });
+    </script>
   </body>
 </html>
