--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,10 +20,10 @@
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to "破損報告書作成", new_topic_path %></li>
           <li><%= link_to "破損報告書一覧", topics_path  %></li>
-          <li><%= link_to "金型点検", new_inspect_path  %></li>
+          <li><%= link_to "金型点検", new_choice_path  %></li>
           <li><%= link_to "金型点検一覧", inspects_path  %></li>
           <li><%= link_to "イベント議事録", "#"  %></li>
-          <li><%= link_to "一般金型メンテナンス", "#"  %></li>
+          <li><%= link_to "一般金型メンテナンス", "#" %></li>
           <li><%= link_to "会員登録", new_user_path   %></li>
         </ul> 
        </div>  
