--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -1,33 +1,55 @@
 <div class="new-wrapper">
   <div class="container">
     <div class="row">
+     <div class="col-md-offset-4 col-md-4 new-container">
       <%= form_for @topics do |f| %>
         <div class="form-group">
           <%= f.label "画像" %>
-          <%= f.file_field :images%>
+          <%= f.file_field :images, class: "form-control"%>
+        </div>
+        <div class="form-group">
           <%= f.label "発生日" %>
-          <%= f.datetime_field :accrual_date %>
+          <%= f.datetime_field :accrual_date, class: "form-control" %>
+        </div>
+        <div class="form-group">  
           <%= f.label "車種" %>
-          <%= f.text_field :car_name %>
+          <%= f.text_field :car_name, class: "form-control" %>
+        </div>  
+        <div class="form-group">  
           <%= f.label "部品名" %>
-          <%= f.text_field :name %>
+          <%= f.text_field :name, class: "form-control" %>
+        </div>  
+        <div class="form-group">  
           <%= f.label "工程" %>
-          <%= f.text_field :process %><br>
+          <%= f.text_field :process, class: "form-control" %>
+        </div> 
+        <div class="form-group">  
           <%= f.label "班名" %>
-          <%= f.text_field :shop_name %> 
+          <%= f.text_field :shop_name, class: "form-control" %>
+        </div>  
+        <div class="form-group">  
           <%= f.label "作業者" %>
-          <%= f.text_field :worker %>
+          <%= f.text_field :worker,class: "form-control" %>
+        </div>  
+        <div class="form-group">
           <%= f.label "工数" %>
-          <%= f.number_field :man_hours %>
+          <%= f.number_field :man_hours,class: "form-control" %>
+        </div>  
+        <div class="form-group">  
           <%= f.label "購入依頼部品" %>
-          <%= f.text_field :parts %><br>
+          <%= f.text_field :parts, class: "form-control" %>
+        </div>  
+        <div class="form-group">  
           <%= f.label "件名" %>
-          <%= f.text_field :subject %><br>
-          <%= f.label "状況説明" %><br>
-          <%= f.text_area :description %><br>
+          <%= f.text_field :subject, class: "form-control" %>
+        </div> 
+        <div class="form-group">  
+          <%= f.label "状況説明" %>
+          <%= f.text_area :description, class: "form-control",:size => "20x10" %>
         </div>
         <%= f.submit '投稿' %>
-      <% end %>  
+      <% end %>
+     </div> 
     </div>   
   </div>     
 </div>      
