--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -14,9 +14,36 @@
 
 
 .new-wrapper{
-  padding-top: 150px;
+  padding-top: 120px;
 }
 
 .table-bordered{
  border: 2px solid #090909;
 }
+
+.col {
+  flex-basis: 0;
+  flex-grow: 1;
+  max-width: 100%;
+}
+.alert {
+  padding-top: 50px;
+  position: fixed;
+  width: 100%;
+  z-index: 10000;
+}
+
+.topic_descrption{
+  word-break: break-all;
+  width: 500px;
+  heigth: 400px;
+}
+
+.topic_img{
+  object-fit: fill;
+}
+img {
+  width: 450px;
+  height: 450px;
+  border: 1px solid #000;
+}  
