--- a/app/views/choices/new.html.erb
+++ b/app/views/choices/new.html.erb
@@ -1,12 +1,12 @@
 <div class="new-wrapper">
  <div class="container">
-  <div class="row">
-   <%= form_for @choices do |f|%>  
-     <label><%= f.radio_button :check, 1 %> ドロー型 </label>
-     <label><%= f.radio_button :check, 2 %> トリム型 </label>
-     <label><%= f.radio_button :check, 3 %> BLK </label>
-     <%= f.submit '投稿' %>
-   <% end %>
-  </div>
+  <div class="col-md-offset-4 col-md-4 choices-new-container">
+   <div class="row">
+    <h5>使用する点検用紙を選択してください</h5>
+       <%= link_to "ドロー型", new_inspect_path, class: 'btn btn-primary btn-lg' %>
+       <%= link_to "トリム型", new1_path, class: 'btn btn-primary btn-lg' %>
+       <%= link_to "BLK型", new2_path,class: 'btn btn-primary btn-lg' %>
+   </div>
+  </div> 
  </div>
 </div> 
