--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -1,55 +1,35 @@
 <div class="new-wrapper">
   <div class="container">
-    <div class="row">
-     <div class="col-md-offset-4 col-md-4 new-container">
-      <%= form_for @topics do |f| %>
-        <div class="form-group">
+    <%= form_for @topics do |f| %>
+     <div class="col-md-offset-2 col-md-8 topics-new-container">
+      <div class="row">
           <%= f.label "画像" %>
-          <%= f.file_field :images, class: "form-control"%>
-        </div>
-        <div class="form-group">
+          <%= f.file_field :images, class:"col" %><br>
           <%= f.label "発生日" %>
-          <%= f.datetime_field :accrual_date, class: "form-control" %>
-        </div>
-        <div class="form-group">  
-          <%= f.label "車種" %>
-          <%= f.text_field :car_name, class: "form-control" %>
-        </div>  
-        <div class="form-group">  
-          <%= f.label "部品名" %>
-          <%= f.text_field :name, class: "form-control" %>
-        </div>  
-        <div class="form-group">  
-          <%= f.label "工程" %>
-          <%= f.text_field :process, class: "form-control" %>
-        </div> 
-        <div class="form-group">  
-          <%= f.label "班名" %>
-          <%= f.text_field :shop_name, class: "form-control" %>
-        </div>  
-        <div class="form-group">  
-          <%= f.label "作業者" %>
-          <%= f.text_field :worker,class: "form-control" %>
-        </div>  
-        <div class="form-group">
-          <%= f.label "工数" %>
-          <%= f.number_field :man_hours,class: "form-control" %>
-        </div>  
-        <div class="form-group">  
-          <%= f.label "購入依頼部品" %>
-          <%= f.text_field :parts, class: "form-control" %>
-        </div>  
-        <div class="form-group">  
+          <%= f.datetime_field :accrual_date, class:"col" %>
           <%= f.label "件名" %>
-          <%= f.text_field :subject, class: "form-control" %>
-        </div> 
-        <div class="form-group">  
-          <%= f.label "状況説明" %>
-          <%= f.text_area :description, class: "form-control",:size => "20x10" %>
-        </div>
-        <%= f.submit '投稿' %>
-      <% end %>
-     </div> 
-    </div>   
+          <%= f.text_field :subject, class:"col" %><br>
+          <%= f.label "車種" %>
+          <%= f.text_field :car_name %>
+          <%= f.label "部品名" %>
+          <%= f.text_field :name, class:"col" %>
+          <%= f.label "工程" %>
+          <%= f.text_field :process, class:"col" %><br>
+          <%= f.label "班名" %>
+          <%= f.text_field :shop_name, class:"col"  %>
+          <%= f.label "作業者" %>
+          <%= f.text_field :worker, class:"col" %>
+          <%= f.label "工数" %>
+          <%= f.number_field :man_hours,class:"col" %>
+      </div>
+       <div class="row">  
+        <%= f.label "購入依頼部品" %>
+        <%= f.text_area :parts, class: "form-control" %>
+        <%= f.label "状況説明" %>
+        <%= f.text_area :description, class: "form-control",:size => "20x10" %>
+       </div>
+       <%= f.submit '投稿' %>
+      </div> 
+    <% end %>
   </div>     
 </div>      
