--- a/app/views/inspects/show2.html.erb
+++ b/app/views/inspects/show2.html.erb
@@ -45,7 +45,7 @@
            <tbody>
              <tr>
               <td>1</td>
-              <td>ドロー型</td>
+              <td>BLK型</td>
               <td><%= i.check1 %></td>
              </tr>
              <tr>
