--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
 　　<% @topics.each do|t| %>
    　 　 <div class="row">
-        <div class="col-md-10">       
+        <div class="col-md-offset-1 col-md-10">       
          <table class="table table-bordered">
          　 <thead>
             <tr>
@@ -30,7 +30,8 @@
              <td><%= t.user.user_name %></td>
         　 　 </tr>
          　</tbody>
-       </div>  　
+         </table>　
+        </div>  　
          　<div class="col-md-offset-4 col-md-4">
             <table class="table table-bordered">
              <tr>
@@ -43,7 +44,7 @@
            </div>　 
         </div>  
         <div class="row">
-         <div class="col-md-offset-1 col-md-10">
+         <div class="col-md-12">
           <table class="table table-bordered">
             <tr>
              <th>画像</th>
