--- a/app/views/inspects/index.html.erb
+++ b/app/views/inspects/index.html.erb
@@ -19,9 +19,7 @@
    　　</thead>  
    　  <tbody>
        <% @inspects.each.with_index(1) do |i, idx| %>
-        <% i.mold_type %>
-        <% i.mold_type1 %>
-        <% i.mold_type2 %>
+        <% i.check %>
         <tr>
           <td><%= idx %></td>
           <td><%= i.id %></td>
@@ -31,13 +29,7 @@
           <td><%= i.process %></td>
           <td><%= i.shop_name %></td>
           <td><%= i.user.user_name %></td>
-          <% if i.mold_type.present? %>
-            <td><%= link_to "詳細", inspect_path(id: i.id) %></td>
-          <% elsif i.mold_type1.present? %>  
-            <td><%= link_to "詳細", show1_path(id: i.id) %></td>
-          <% else %>  
-            <td><%= link_to "詳細", show2_path(id: i.id) %></td>
-          <% end %> 
+          <td><%= link_to "詳細", inspect_path(id: i.id) %></td>
           <td><%= link_to "削除",  inspects_destroy_path(id: i.id), method: :delete %></td>
         </tr>
    　   <% end %> 
