--- a/app/views/choices/new.html.erb
+++ b/app/views/choices/new.html.erb
@@ -3,9 +3,9 @@
   <div class="col-md-offset-4 col-md-4 choices-new-container">
    <div class="row">
     <h5>使用する点検用紙を選択してください</h5>
-       <%= link_to "ドロー型", new_inspect_path, class: 'btn btn-primary btn-lg' %>
-       <%= link_to "トリム型", new1_path, class: 'btn btn-primary btn-lg' %>
-       <%= link_to "BLK型", new2_path, class: 'btn btn-primary btn-lg' %>
+       <%= link_to "ドロー型", new_inspect_path(check: "draw"), class: 'btn btn-primary btn-lg' %>
+       <%= link_to "トリム型", new_inspect_path(check: "trim"), class: 'btn btn-primary btn-lg' %>
+       <%= link_to "BLK型",  new_inspect_path(check: "BLK"), class: 'btn btn-primary btn-lg' %>
    </div>
   </div> 
  </div>
