--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -52,7 +52,7 @@
           <%= f.text_area :parts, class: "form-control" %>
           <%= f.label "状況説明" %>
           <span class="label label-danger"> 必須 </span>
-          <%= f.text_area :description, class: "form-control" %>
+            <%= f.text_area :description, class: "form-control", rows: "7" %>
          </div> 
        </div>
        <%= f.check_box :check %>
